style(blog): fix spacing for Safari

--- a/src/style.css
+++ b/src/style.css
@@ -43,12 +43,8 @@
   @apply text-2xl text-slate-50;
 }
 .blog-content > p {
-  @apply mb-5;
+  @apply mb-4;
   @apply text-xl font-light leading-8;
-}
-.blog-content > p > br {
-  @apply mb-2 block;
-  content: ' ';
 }
 .blog-content > ol,
 .blog-content > ul {
